fix(desktop): animated native fullscreen, composer Esc, draft invariant, RECENT auto-refresh
- fullscreen (#94): a borderless NSWindow is NOT resized by AppKit — stretch
  to the screen at windowEnteringFullScreen and restore at exiting, so the
  OS animation carries the frame (end-of-transition resizing popped content
  after a black gap and drifted the exit frame up-right before snapping)
- Esc exits fullscreen from the BUBBLING pass only: the preview-pass handler
  stole Esc from the composer (slash menu, @-completion, stop-turn)
- composer draft (#88): save-old lives inside the key-change collector, not
  a flush contract at N open entry points (openRunning had already missed
  it); fleet opens also clear the optimistic sidebar pick (#82/#83)
- RECENT: silently re-pull the session list when a sessionId materializes
  that the rows don't carry — a brand-new session (also /clear, forked
  resume) needed a manual Cmd-R to appear
- reveal effect: time-boxed + single renderedGroups() predicate
- GA4: one send() envelope for track/recordError, JSON built on the IO
  scope, 10s request timeout
- DesktopUpdater: inline the isNewer pass-through; MacWindow API is now
  phase-based (FsPhase)